Revise index.html for Interactive Number Line
Updated the title and input controls for the interactive number line.

--- a/index.html
+++ b/index.html
@@ -3,30 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Number Line Explorer</title>
+  <title>Interactive Number Line</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-900 text-white flex flex-col items-center min-h-screen p-6">
-  <h1 class="text-3xl font-bold mb-6 text-yellow-400">Number Line Explorer 🧮</h1>
+  <h1 class="text-3xl font-bold mb-6 text-yellow-400">Interactive Number Line 🧮</h1>
 
-  <!-- Input section -->
-  <div class="flex flex-col sm:flex-row gap-4 mb-6 items-center">
-    <input id="num1" type="number" class="input-box" placeholder="First number">
-    <select id="operation" class="input-box">
-      <option value="add">+</option>
-      <option value="subtract">−</option>
-    </select>
-    <input id="num2" type="number" class="input-box" placeholder="Second number">
-    <button id="calculateBtn" class="bg-yellow-400 text-gray-900 font-bold px-4 py-2 rounded-lg hover:bg-yellow-300 transition">Go!</button>
+  <!-- Controls -->
+  <div class="flex flex-col sm:flex-row gap-4 items-center mb-8">
+    <input id="startNum" type="number" placeholder="Start at..." class="input-box">
+    <button id="setStartBtn" class="btn">Set Start</button>
+    <button id="stepBackBtn" class="btn">← Step Back (−1)</button>
+    <button id="stepForwardBtn" class="btn">Step Forward (+1) →</button>
+    <button id="resetBtn" class="btn bg-red-400 hover:bg-red-300">Clear</button>
   </div>
 
   <!-- Number line -->
-  <div id="numberLineContainer" class="relative w-full max-w-3xl h-32 mt-8">
+  <div id="numberLineContainer" class="relative w-full max-w-3xl h-32 mt-4">
     <div id="numberLine" class="absolute inset-x-0 top-1/2 h-1 bg-white"></div>
   </div>
 
-  <p id="result" class="text-xl mt-6"></p>
+  <p id="currentPosition" class="text-xl mt-6"></p>
 
   <script src="script.js"></script>
 </body>
