Change title and update number line width
Updated the title and adjusted the number line container width.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interactive Number Line</title>
+  <title>Interactive Number Line 0–100</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-900 text-white flex flex-col items-center min-h-screen p-6">
-  <h1 class="text-3xl font-bold mb-6 text-yellow-400">Interactive Number Line 🧮</h1>
+  <h1 class="text-3xl font-bold mb-6 text-yellow-400">Number Line 0–100 🧮</h1>
 
   <!-- Controls -->
   <div class="flex flex-col sm:flex-row gap-4 items-center mb-8">
@@ -20,7 +20,7 @@
   </div>
 
   <!-- Number line -->
-  <div id="numberLineContainer" class="relative w-full max-w-3xl h-32 mt-4">
+  <div id="numberLineContainer" class="relative w-full max-w-5xl h-32 mt-4">
     <div id="numberLine" class="absolute inset-x-0 top-1/2 h-1 bg-white"></div>
   </div>
 
