--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Interactive Number Line 0–100</title>
+  <title>Interactive Number Line 🔢</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-900 text-white min-h-screen p-6">
   <div class="max-w-6xl mx-auto">
-    <h1 class="text-3xl font-bold mb-6 text-yellow-400">Number Line 0–100 🧮</h1>
+    <h1 class="text-3xl font-bold mb-6 text-yellow-400">Number Line Explorer 🧮</h1>
 
     <!-- Controls -->
     <div class="flex flex-wrap gap-3 items-center mb-6">
-      <input id="startNum" type="number" placeholder="Start at..." class="input-box" min="0" max="100">
+      <input id="startNum" type="number" placeholder="Start at..." class="input-box" min="-20" max="120">
       <button id="setStartBtn" class="btn">Set Start</button>
+
       <button id="stepBackBtn" class="btn">← Step −1</button>
       <button id="stepForwardBtn" class="btn">Step +1 →</button>
+
+      <button id="stepBack10Btn" class="btn bg-blue-400 hover:bg-blue-300">← Step −10</button>
+      <button id="stepForward10Btn" class="btn bg-blue-400 hover:bg-blue-300">Step +10 →</button>
+
       <button id="resetBtn" class="btn bg-red-400 hover:bg-red-300">Clear</button>
     </div>
 
-    <!-- White panel so black labels are readable -->
+    <!-- White panel -->
     <div class="rounded-xl shadow-lg p-4 bg-white">
-      <!-- Number line area -->
       <div id="numberLineContainer" class="relative w-full h-44">
         <div id="numberLine" class="absolute left-0 right-0 h-1 bg-black"></div>
       </div>
