--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Interactive Number Line 🔢</title>
+  <title>Number Line Explorer 🔢</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +25,7 @@
       <button id="resetBtn" class="btn bg-red-400 hover:bg-red-300">Clear</button>
     </div>
 
-    <!-- White panel -->
+    <!-- Number line area -->
     <div class="rounded-xl shadow-lg p-4 bg-white">
       <div id="numberLineContainer" class="relative w-full h-44">
         <div id="numberLine" class="absolute left-0 right-0 h-1 bg-black"></div>
