Format HTML file with proper indentation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <button id="resetBtn" class="btn bg-red-400 hover:bg-red-300">Clear</button>
     </div>
 
-    <!-- Number line area -->
+    <!-- Number line -->
     <div class="rounded-xl shadow-lg p-4 bg-white">
       <div id="numberLineContainer" class="relative w-full h-44">
         <div id="numberLine" class="absolute left-0 right-0 h-1 bg-black"></div>
