--- a/index.html
+++ b/index.html
@@ -4,38 +4,121 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dual Number Line Explorer 🔢</title>
+  <!-- Fun, kid-friendly Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:700,400&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.0/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Quicksand', 'Nunito', 'Arial Rounded MT Bold', Arial, sans-serif;
+      background: linear-gradient(135deg, #ffe6a7 0%, #bbe2ec 100%);
+      min-height: 100vh;
+    }
+    .input-box {
+      border-radius: 20px;
+      padding: 0.75em 1em;
+      font-size: 1.2rem;
+      border: 2px solid #ffb703;
+      text-align: center;
+      max-width: 120px;
+      outline: none;
+    }
+    .btn {
+      background-color: #ffe066;
+      color: #374151;
+      font-size: 1.1rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 9999px;
+      padding: 0.75em 1.25em;
+      transition: background 0.2s;
+      box-shadow: 2px 3px 10px rgba(255,193,7,0.12);
+      cursor: pointer;
+      margin: 0 2px;
+      outline: none;
+    }
+    .btn:active {
+      background-color: #ffd60a;
+    }
+    .line-section {
+      padding: 2em 0 1.4em 0;
+    }
+    .line-title {
+      text-align: left;
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #2196f3;
+      background: #fff7da;
+      border-radius: 20px;
+      display: inline-block;
+      margin-left: 1.1em;
+      margin-bottom: 0.7em;
+      padding: 0.2em 1.2em;
+      box-shadow: 2px 2px 10px #8ecae699;
+    }
+    .bg-panel {
+      background: #fffdf7;
+      border-radius: 32px;
+      padding: 2em 1em 1.7em 1em;
+      box-shadow: 0 3px 16px rgba(0,0,0,0.07);
+      margin-top: 0.4em;
+    }
+    .numberline {
+      min-height: 54px;
+      margin: 0.5em 0 2em 0;
+    }
+    .big-emoji {
+      font-size: 2.5rem;
+      vertical-align:middle;
+      margin-right: 0.7em;
+    }
+    /* Responsive improvements for kiddos */
+    @media (max-width: 600px) {
+      .input-box, .btn {
+        font-size: 1em;
+        padding: 0.55em 0.7em;
+      }
+      .bg-panel {
+        padding: 1em 0.3em;
+      }
+      .line-title {
+        font-size: 1.1rem;
+      }
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white min-h-screen p-6 flex flex-col items-center">
-  <h1 class="text-3xl font-bold mb-6 text-yellow-400 text-center">
-    Dual Number Line Explorer 🧮
+<body class="p-3 flex flex-col items-center">
+  <h1 class="text-4xl font-extrabold mb-3 mt-2 text-yellow-500 text-center drop-shadow-lg animate-bounce">
+    <span class="big-emoji">🎲</span>Number Line Playground!<span class="big-emoji">🔢</span>
   </h1>
+  <p class="text-lg mb-7 text-blue-800 bg-blue-100 px-6 py-2 rounded-2xl shadow">
+    Welcome! Use the controls below and jump along the number line. Let's have fun exploring numbers!
+  </p>
 
   <!-- Controls -->
-  <div class="flex flex-wrap gap-3 justify-center items-center mb-6">
-    <input id="startNum" type="number" placeholder="Start at..." class="input-box" min="-20" max="120">
-    <button id="setStartBtn" class="btn">Set Start</button>
-    <button id="stepBackBtn" class="btn">← Step −1</button>
-    <button id="stepForwardBtn" class="btn">Step +1 →</button>
-    <button id="stepBack10Btn" class="btn bg-blue-400 hover:bg-blue-300">← Step −10</button>
-    <button id="stepForward10Btn" class="btn bg-blue-400 hover:bg-blue-300">Step +10 →</button>
-    <button id="resetBtn" class="btn bg-red-400 hover:bg-red-300">Clear</button>
+  <div class="bg-panel flex flex-wrap gap-4 justify-center items-center mb-7 w-full max-w-4xl">
+    <input id="startNum" type="number" placeholder="Where do we start? 🤔" class="input-box" min="-20" max="120">
+    <button id="setStartBtn" class="btn">Go! 🚦</button>
+    <button id="stepBackBtn" class="btn">⬅️ Back 1</button>
+    <button id="stepForwardBtn" class="btn">Forward 1 ➡️</button>
+    <button id="stepBack10Btn" class="btn bg-blue-300 hover:bg-blue-400 text-blue-900">⬅️ Jump -10</button>
+    <button id="stepForward10Btn" class="btn bg-blue-300 hover:bg-blue-400 text-blue-900">Jump +10 ➡️</button>
+    <button id="resetBtn" class="btn bg-red-300 hover:bg-red-400 text-red-900">Reset ♻️</button>
   </div>
 
   <!-- Number lines -->
-  <div class="bg-white rounded-xl shadow-lg divide-y divide-gray-300 w-full max-w-5xl">
+  <div class="bg-white rounded-3xl shadow-2xl divide-y divide-yellow-300 w-full max-w-5xl px-2 py-1">
     <div class="line-section">
-      <div class="line-title">Line 1</div>
+      <div class="line-title">✨ Line 1</div>
       <div id="line1" class="numberline"></div>
     </div>
     <div class="line-section">
-      <div class="line-title">Line 2</div>
+      <div class="line-title">🌈 Line 2</div>
       <div id="line2" class="numberline"></div>
     </div>
   </div>
 
-  <p id="currentPosition" class="text-xl mt-6 text-center">Current number: 0</p>
+  <p id="currentPosition" class="text-2xl mt-7 text-center font-bold text-violet-700">Current number: <span id="kidNum">0</span> 🎉</p>
 
   <script src="script.js"></script>
 </body>
