--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
 
   <!-- External stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -39,7 +39,7 @@
     </section>
 
     <div class="input-section">
-      <label style="color:#e4ffd6;">Choose starting number:</label><br><br>
+      <label for="startNumber" style="color:#e4ffd6;">Choose starting number:</label><br><br>
       <input type="number" id="startNumber" min="0" max="100" value="0" />
       <button id="setStart">Set Start</button>
     </div>
@@ -59,7 +59,7 @@
 
   </div>
 
-  <!-- External script -->
-  <script src="script.js"></script>
+  <!-- External JS file -->
+  <script src="./script.js"></script>
 </body>
 </html>
